--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -45,7 +45,7 @@ jobs:
         # The message to prepend the review suggestion
         message: # optional
         
-        - name: SonarCloud Scan
+      - name: SonarCloud Scan
       # You may pin to the exact commit or the version.
       # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
       uses: SonarSource/sonarcloud-github-action@v1.6
@@ -54,3 +54,23 @@ jobs:
         args: # optional
         # Set the sonar.projectBaseDir analysis property
         projectBaseDir: # optional, default is .
+        
+      name: Analyze code statically
+      "on": pull_request
+      jobs:
+      brakeman:
+      runs-on: ubuntu-latest
+      env:
+        ANALYZER: '@moneyforward/code-review-action-brakeman-plugin'
+        ANALYZER_VERSION: '~0'
+      steps:
+        - uses: actions/checkout@v2
+        - run: sudo npm i -g --no-save "${ANALYZER}@${ANALYZER_VERSION}"
+        - id: node-env
+          run: echo "::set-output name=path::$(npm root -g)"
+        - name: Analyze code statically
+          uses: moneyforward/code-review-action@v0
+          env:
+            NODE_PATH: ${{ steps.node-env.outputs.path }}
+          with:
+            analyzer: ${{ env.ANALYZER }
