--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,76 +1,21 @@
-# This is a basic workflow to help you get started with Actions
-
 name: CI
-
-# Controls when the workflow will run
-on:
-  # Triggers the workflow on push or pull request events but only for the main branch
+'on':
   push:
-    branches: [ main ]
+    branches:
+      - main
   pull_request:
-    branches: [ main ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
+    branches:
+      - main
+  workflow_dispatch: null
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
       - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
+        run: 'echo Hello, world!'
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
-          
       - name: action-git-diff-suggestions
-      # You may pin to the exact commit or the version.
-      # uses: getsentry/action-git-diff-suggestions@8c75946d0d7bbe80a92cf3579d544321512c30b7
-      uses: getsentry/action-git-diff-suggestions@v1
-      with:
-        # github token
-        github-token: # optional
-        # The message to prepend the review suggestion
-        message: # optional
-        
-      - name: SonarCloud Scan
-      # You may pin to the exact commit or the version.
-      # uses: SonarSource/sonarcloud-github-action@de2e56b42aa84d0b1c5b622644ac17e505c9a049
-      uses: SonarSource/sonarcloud-github-action@v1.6
-      with:
-        # Additional arguments to the sonarcloud scanner
-        args: # optional
-        # Set the sonar.projectBaseDir analysis property
-        projectBaseDir: # optional, default is .
-        
-      name: Analyze code statically
-      "on": pull_request
-      jobs:
-      brakeman:
-      runs-on: ubuntu-latest
-      env:
-        ANALYZER: '@moneyforward/code-review-action-brakeman-plugin'
-        ANALYZER_VERSION: '~0'
-      steps:
-        - uses: actions/checkout@v2
-        - run: sudo npm i -g --no-save "${ANALYZER}@${ANALYZER_VERSION}"
-        - id: node-env
-          run: echo "::set-output name=path::$(npm root -g)"
-        - name: Analyze code statically
-          uses: moneyforward/code-review-action@v0
-          env:
-            NODE_PATH: ${{ steps.node-env.outputs.path }}
-          with:
-            analyzer: ${{ env.ANALYZER }
